# dt-cli-tools

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: diff.rs  filter.rs  read.rs
demo/: dtcat.tape  dtdiff.tape  dtfilter.tape  hero.tape  new.csv  new.xlsx  old.csv  old.xlsx  sales.csv  sales.xlsx
docs/superpowers/plans/: 2026-03-30-dt-cli-tools.md  2026-04-04-v0.2.0-sample-convert.md
docs/superpowers/specs/: 2026-03-30-dt-cli-tools-design.md  2026-04-04-v0.2.0-sample-convert-design.md
src/: diff.rs  filter.rs  format.rs  formatter.rs  lib.rs  metadata.rs  reader.rs  writer.rs
src/readers/: arrow.rs  csv.rs  excel.rs  json.rs  mod.rs  parquet.rs
src/writers/: arrow.rs  csv.rs  json.rs  mod.rs  parquet.rs
tests/: dtcat.rs  dtdiff.rs  dtfilter.rs
tests/fixtures/: data.arrow  data.json  data.ndjson  data.parquet  new.arrow  new.csv  new.json  new.ndjson  new.parquet  old.arrow  old.ndjson  old.parquet
